Bad element removing from undo/redo queues.